--- a/index.html
+++ b/index.html
@@ -201,21 +201,23 @@
             color: black;
         }
 
+        /* MEDIA QUERY PARA MÓVILES - AQUÍ ESTÁ LA MAGIA DEL ESPACIO */
         @media (max-width: 768px) {
             #ui-layer {
-                padding: 1rem;
+                padding: 1.5rem 1rem; /* Un poco más de margen arriba y abajo */
                 overflow-y: auto; 
             }
             .middle-section {
                 flex-direction: column;
-                justify-content: flex-end;
+                justify-content: space-between; /* Empuja a JuCa arriba y Maro abajo */
                 gap: 1.5rem;
-                margin: 1.5rem 0;
+                margin: 2rem 0; /* Da espacio respecto al titulo y al footer */
             }
             .bio-left, .bio-right {
                 text-align: center;
                 max-width: 100%;
                 width: 100%;
+                background: rgba(0,0,0,0.6); /* Fondo un poco más oscuro en móvil para mejor lectura */
             }
             .bio-right .social-links, .bio-left .social-links {
                 justify-content: center;
